2004-11-22  Joel Rosdahl  <joel@rosdahl.net>

	* testsuite.at (NEED_UNB64): Check that python knows how to decode
	strings before using it.

2004-11-21  Joel Rosdahl  <joel@rosdahl.net>

	* testsuite.at (NEED_UNB64): Find more programs for decoding
	base64.

2004-11-20  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_merge_1.at: New test.
	* testsuite.at: Add it.
	(NEED_UNB64): New macro.
	(UNB64): Likewise.
	* tests/t_unidiff.at: Use them.
	* tests/t_unidiff2.at: Likewise.

2004-11-19  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_initfork.at: Remove file; redundant with
	t_merge2_add.at.
	* testsuite.at: Don't call it.

2004-11-18  Derek Scherger  <derek@echologic.com>

	* commands.cc (list tags): new command.
	* monotone.1: update.
	* monotone.texi: update.
	* std_hooks.lua: remove unused get_problem_solution hook.
	* test/t_tags.at: new test.
	* testsuite.at: call it.

2004-11-18  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Committing Work): Remove mistakenly added
	redundant command line argument.

2004-11-17  Joel Rosdahl  <joel@rosdahl.net>

	* commands.cc (diff): Don't print hashes around diff output if
	there is no diff to print.

	Fix bugs #8714 "monotone update working copy to previous version"
	and #9069 "update with multiple candidates":
	* commands.cc (update): Let the update command take an optional
	revision target parameter. Without an explicit revision target,
	the current branch head is used just like before. Added logic for
	updating to an older revision or another revision reachable via a
	common ancestor.
	* tests/t_update_to_revision.at: Add regression tests for new
	update logic.
	* testsuite.at: Add new test.
	* monotone.texi: Document new update argument.

2004-11-17  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc (request_fwd_revisions): Rename 'first_attached_edge'
	to 'an_attached_edge', because it does not represent the first
	attached edge.  Likewise for 'first_attached_cset'.