@@ -257,3 +257,4 @@ m4_include(tests/t_heads.at)
 m4_include(tests/t_heads_discontinuous_branch.at)
 m4_include(tests/t_merge_1.at)
 m4_include(tests/t_tags.at)
+m4_include(tests/t_add_dot.at)
